fixed z-index, added an event listener to Aside.close()

--- a/static/css/layout/z-index.css
+++ b/static/css/layout/z-index.css
@@ -1,8 +1,10 @@
 .message {
-    z-index: 32px;
+    z-index: 32;
 }
 
-body > form {
+aside,
+header,
+footer {
     z-index: 16;
 }
 
